# wipeit

./: .bandit  .gitignore  DEVICE_ID_FEATURE.md  Makefile  PROGRESS_PERCENT_BUG_ANALYSIS.md  README.md  RESUME_BUG_INVESTIGATION.md  RESUME_MILESTONE_BUG_TESTS.md  TESTDESIGN.md  bandit.yaml  pyproject.toml  test-ci.sh  test-github-actions.sh  test_resume_display.py  test_wipeit.py  text.tmp  wipeit.py  wipeit_progress.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  status.yml  tests.yml
DOCS/: ARCH.md  CHANGES.md  CI-CD.md  KEYBOARD_INTERRUPT_BUG.md  PERFORMANCE-GUIDE.md  PROGRAMMING_STYLE_GUIDE.md  PROGRESS_FLUSH_FIX.md  RELEASE_CHECK_LIST.md  RESUME_MILESTONE_BUG_TESTS.md  SAFETY_SETUP.md  TESTDESIGN.md  TODO.md  buffer-override-strategy.plan.md
scripts/: test-ci.sh
src/: __init__.py  device_detector.py  disk_pretest.py  global_constants.py  progress_file_version.py  test_device_detector.py  test_disk_pretest.py  test_progress_file_version.py  test_wipe_strategy.py  test_wipe_strategy_factory.py  test_wipeit.py  wipe_strategy.py  wipe_strategy_factory.py  wipeit.py
