[project]
name = "wipeit"
version = "0.2.0"
description = "A secure device wiping utility that overwrites block devices with random data"
authors = [
    {name = "Luis Cortes", email = "mrluiscortes@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Topic :: System :: Systems Administration",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
wipeit = "wipeit:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []

