[project]
name = "wipeit"
version = "1.3.0"
description = "A secure device wiping utility that overwrites block devices with random data"
authors = [
    {name = "Luis Cortes", email = "mrluiscortes@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.8.1"
dependencies = [
    # Core dependencies for the wipeit utility
    # Note: wipeit uses only Python standard library modules
    # No external dependencies required for core functionality
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Topic :: System :: Systems Administration",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
wipeit = "src.wipeit:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    # Code quality and formatting tools
    "flake8>=6.0.0", # Linting and style checking
    "isort>=5.12.0", # Import sorting
    "autopep8>=2.0.0", # Code formatting (line length fixes)
    # Testing and coverage tools
    "coverage>=7.0.0", # Code coverage analysis
    # Security scanning tools
    "bandit>=1.7.0", # Security vulnerability scanner
    "safety>=2.3.0", # Dependency vulnerability checker
    # Build and packaging tools
    "build>=0.10.0", # PEP 517 build frontend
    "twine>=4.0.0", # Package upload tool
]

# Tool configuration
[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.flake8]
max-line-length = 79
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "venv",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "test_wipeit.py",
    "*/tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

